# ant_simulation

./: Cargo.toml
egui_app/: Cargo.toml
egui_app/src/: app.rs
genetic_algo/: Cargo.toml
genetic_algo/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
genetic_algo/src/crossover/: uniform_crossover.rs
genetic_algo/src/mutation/: gaussian.rs
genetic_algo/src/selection/: roulette.rs
neuralnetwork/: Cargo.toml
neuralnetwork/src/: lib.rs
simulation/: Cargo.toml
simulation/src/: brain.rs  lib.rs
