[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-neuralnetwork = { path = "../neuralnetwork" }
lib-genetic_algo = { path = "../genetic_algo" }
nalgebra = { version = "0.31.0", features = ["rand-no-std"]}
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
